--- a/42-transcendence/server/package.json
+++ b/42-transcendence/server/package.json
@@ -21,9 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^1.0.1",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-42": "^1.2.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
