--- a/42-transcendence/client/package.json
+++ b/42-transcendence/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.15",
     "@next/font": "13.1.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -16,10 +18,17 @@
     "axios": "^1.3.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "next": "13.1.4",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
