--- a/42-transcendence/client/package.json
+++ b/42-transcendence/client/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.1.4",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "framer-motion": "^9.0.4",
     "next": "13.1.4",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
