--- a/42-transcendence/client/package.json
+++ b/42-transcendence/client/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
