--- a/42-transcendence/client/package.json
+++ b/42-transcendence/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.15",
     "@next/font": "13.1.4",
