--- a/42-transcendence/client/package.json
+++ b/42-transcendence/client/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.1",
+    "cookie-cutter": "^0.2.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "flowbite": "^1.6.3",
