--- a/server/.env.template
+++ b/server/.env.template
@@ -3,8 +3,9 @@ BACKEND_HOST=
 
 DATABASE_URL="postgresql://admin:dbadmin@localhost:5434/transcendence?schema=public"
 
-JWT_SECRET=""
+# 'openssl rand -base64 15' to generate a random string
+JWT_SECRET=
 
-FORTYTWO_APP_ID=
+FORTYTWO_APP_UID=
 FORTYTWO_APP_SECRET=
 FORTYTWO_CALLBACK_URL=
