creating .env.template

--- a/server/.env.template
+++ b/server/.env.template
@@ -1,9 +1,10 @@
+# create a copy of this file and name it .env || .env.local and set these values
 FRONTEND_HOST=
 BACKEND_HOST=
 
 DATABASE_URL="postgresql://admin:dbadmin@localhost:5434/transcendence?schema=public"
 
-# 'openssl rand -base64 15' to generate a random string
+# run 'openssl rand -base64 15' to generate a random string
 JWT_SECRET=
 
 FORTYTWO_APP_UID=
