Updating .env.template

--- a/server/.env.template
+++ b/server/.env.template
@@ -1,4 +1,5 @@
-# create a copy of this file and name it .env || .env.local and set these values
+# DO NOT MODIFY THIS FILE!!
+# create a copy of this file and name it .env or .env.local and set these values
 FRONTEND_HOST=
 BACKEND_HOST=
 
