--- a/client/package.json
+++ b/client/package.json
@@ -11,24 +11,23 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@headlessui/react": "^1.7.11",
-    "@heroicons/react": "^2.0.15",
-    "@next/font": "13.1.4",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "axios": "^1.3.1",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
+    "@next/font": "^13.2.3",
+    "@types/node": "^18.14.6",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "cookie-cutter": "^0.2.0",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
     "flowbite": "^1.6.3",
-    "flowbite-react": "^0.3.8",
-    "framer-motion": "^9.0.4",
-    "next": "13.1.4",
-    "next-auth": "^4.19.2",
+    "flowbite-react": "^0.4.1",
+    "framer-motion": "^10.2.1",
+    "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
