--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@next/font": "^13.2.3",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
