small change to env template

--- a/client/.env.template
+++ b/client/.env.template
@@ -6,6 +6,8 @@ NEXT_PUBLIC_LOGOUT_ENDPOINT=
 
 NEXT_PUBLIC_SIGNUP_ENDPOINT=
 
+NEXT_PUBLIC_SIGNIN_ENDPOINT=
+
 NEXT_PUBLIC_VERIFY_TOKEN_ENDPOINT=
 
 NEXT_PUBLIC_VERIFY_SESSION_ENDPOINT=
