Complete file upload on fronend

--- a/server/.env.template
+++ b/server/.env.template
@@ -21,3 +21,5 @@ FULL_AUTH_REDIRECTION=
 
 # if the user is new to the game, redirect to /login  to complete the profile
 SESSION_AUTH_REDIRECTION=
+
+PROFILE_UPLOADS_PATH=
