--- a/client/.env.template
+++ b/client/.env.template
@@ -13,3 +13,7 @@ NEXT_PUBLIC_VERIFY_TOKEN_ENDPOINT=
 NEXT_PUBLIC_VERIFY_SESSION_ENDPOINT=
 
 NEXT_PUBLIC_JWT_SECRET=
+
+NEXT_PUBLIC_UPLOAD_PROFILE_ENDPOINT=
+
+NEXT_PUBLIC_UPLOAD_WALLPAPER_ENDPOINT=
