--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,8 @@
 **/!.vscode/extensions.json
 
 todo
-**/uploads
+**/uploads/profiles/*
+**/uploads/wallpapers/*
+
+!**/uploads/profiles/default.png
+!**/uploads/wallpapers/wallpaper.png
