--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.6.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
