--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prisma:dev:deploy": "prisma migrate deploy",
+    "prisma:dev:deploy": "prisma migrate reset",
     "db:up": "docker-compose -f '../docker-compose.yml' up -d ",
     "db:down": "docker-compose -f '../docker-compose.yml' down",
     "db:restart": "npm run db:down && npm run db:up && npm run prisma:dev:deploy",
