--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "dependencies": {
+    "@nestjs/common": "^9.3.9",
+    "@nestjs/core": "^9.3.9",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
+    "@prisma/client": "^4.11.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "prisma": "^4.11.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
+    "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35"
   }
 }
