--- a/server/package.json
+++ b/server/package.json
@@ -31,8 +31,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/websockets": "^9.3.9",
+    "@types/bcrypt": "^5.0.0",
+    "@types/passport": "^1.0.12",
     "@types/uuid": "^9.0.1",
     "argon2": "^0.30.3",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
