--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "prisma:dev:deploy": "prisma migrate reset",
     "db:up": "docker-compose -f '../docker-compose.yml' up -d ",
     "db:down": "docker-compose -f '../docker-compose.yml' down",
-    "db:restart": "npm run db:down && npm run db:up && npm run prisma:dev:deploy",
+    "db:restart": "npm run db:down && npm run db:up && sleep 1 && npm run prisma:dev:deploy",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
