--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.2.7",
     "tailwindcss-textshadow": "^2.1.3"
   }
