--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "api:dev": "json-server --watch db.json --port 4444",
     "prisma:dev:deploy": "prisma migrate reset",
     "db:up": "docker-compose -f '../docker-compose.yml' up -d ",
     "db:down": "docker-compose -f '../docker-compose.yml' down",
@@ -64,6 +65,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
+    "json-server": "^0.17.2",
     "prettier": "^2.3.2",
     "prisma": "^4.11.0",
     "source-map-support": "^0.5.20",
