Fetch profile and wallpaper picture: - Fix SideBar resize

--- a/client/.env.template
+++ b/client/.env.template
@@ -17,3 +17,5 @@ NEXT_PUBLIC_JWT_SECRET=
 NEXT_PUBLIC_UPLOAD_PROFILE_ENDPOINT=
 
 NEXT_PUBLIC_UPLOAD_WALLPAPER_ENDPOINT=
+
+NEXT_PUBLIC_PLAYER_DATA_ENDPOINT=
