--- a/server/package.json
+++ b/server/package.json
@@ -45,7 +45,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.3.0",
