--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,11 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "remove": "^0.1.5",
     "socket.io-client": "^4.6.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
