--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/websockets": "^9.3.9",
+    "@types/shortid": "^0.0.29",
     "@types/uuid": "^9.0.1",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
@@ -43,7 +44,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
