--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,14 @@
         "flowbite": "^1.6.3",
         "flowbite-react": "^0.4.1",
         "framer-motion": "^10.2.1",
+        "mdb-react-ui-kit": "^6.0.0",
         "next": "13.2.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-router-dom": "^6.9.0",
         "react-use-websocket": "^4.3.1",
         "socket.io-client": "^4.6.1",
+        "tailwind-scrollbar-hide": "^1.1.7",
         "typescript": "4.9.5"
     },
     "devDependencies": {
