Added static images serving for profile : path two warning in console and compiler

--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.9",
+    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/websockets": "^9.3.9",
     "@types/qrcode": "^1.5.0",
     "@types/uuid": "^9.0.1",
