--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
         "react-use-websocket": "^4.3.1",
         "socket.io-client": "^4.6.1",
         "tailwind-scrollbar-hide": "^1.1.7",
-        "typescript": "4.9.5"
+        "typescript": "4.9.5",
+        "yarn": "^1.22.19"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
