fix: fixed image link not working on next/image

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@
 todo
 **/uploads/avatars/*
 **/uploads/wallpapers/*
+**/uploads/rooms/*
 
 !**/uploads/avatars/default.png
 !**/uploads/wallpapers/wallpaper.png
