--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,13 @@
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
-        "api:dev": "json-server --watch db.json --port 4444",
-        "db:dev:migrate": "prisma migrate dev --name init",
-        "db:dev:deploy": "prisma migrate reset",
+        "api:dev": "json-server --watch db.json --port 4444", 
+        "db:migrate:dev": "prisma migrate dev --name init",
+        "db:migrate:reset": "prisma migrate reset",
         "db:up": "docker-compose -f ../docker-compose.yml up -d ",
         "db:down": "docker-compose -f ../docker-compose.yml down",
-        "db:restart": "npm run db:down && npm run db:up && sleep 1 && npm run db:dev:migrate",
-        "db:reset": "npm run db:down && npm run db:up && sleep 1 && npm run db:dev:deploy",
+        "db:restart": "yarn run db:down && yarn run db:up",
+        "db:reset": "yarn run db:down && yarn run db:up && sleep 1 && yarn run db:migrate:reset",
         "db:studio": "prisma studio",
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
