--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
         "react-dom": "18.2.0",
         "react-image-file-resizer": "^0.4.8",
         "react-router-dom": "^6.9.0",
+        "react-spinners": "^0.13.8",
         "react-use-websocket": "^4.3.1",
         "socket.io-client": "^4.6.1",
         "tailwind-scrollbar-hide": "^1.1.7",
