--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,31 @@
-version:  '3'
+version: '3'
 services:
   database:
-    image:  postgres:13
+    image: postgres:13
     ports:
-      - 5434:5432
+      - 5432:5432
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: dbadmin
       POSTGRES_DB: transcendence
+    networks:
+      - server
+  server:
+    container_name: server
+    build: ./server
+    ports:
+      - 8000:8000
+    depends_on:
+      - database
+    networks:
+      - server
+  client:
+    container_name: client
+    build: ./client
+    ports:
+      - 3000:3000
+    depends_on:
+      - server
     networks:
       - server
 networks:
