Migrating to docker, and updating .nv

--- a/server/.env.template
+++ b/server/.env.template
@@ -1,7 +1,11 @@
 # DO NOT MODIFY THIS FILE!!
 # create a copy of this file and name it .env or .env.local and set these values
-FRONTEND_HOST=
-BACKEND_HOST=
+# use FRONTEND_HOST to set the host of the frontend in the client side with the hostname
+FRONTEND_HOST=""
+# use FRONTEND_HOST0 to set the host of the frontend in the server side with container name
+FRONTEND_HOST0=""
+
+BACKEND_HOST=""
 
 DATABASE_URL="postgresql://admin:dbadmin@localhost:5434/transcendence?schema=public"
 
