--- a/client/.env.template
+++ b/client/.env.template
@@ -1,4 +1,4 @@
-# use NEXT_PUBLIC_BACKEND_HOST to set the host of the frontend in the client side with the hostname
+# use NEXT_PUBLIC_BACKEND_HOST to set the host of the backend in the client side with the hostname
 NEXT_PUBLIC_BACKEND_HOST=""
-# use NEXT_PUBLIC_BACKEND_HOST0 to set the host of the frontend in the server side with container name
+# use NEXT_PUBLIC_BACKEND_HOST0 to set the host of the backend in the server side with container name
 NEXT_PUBLIC_BACKEND_HOST0=""
