--- a/.env.template
+++ b/.env.template
@@ -10,11 +10,11 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database:5432/$
 
 # Forntend host
 FE_CONTAINER_HOST="http://frontend:3000"
-FRONTEND_HOST=""
+FRONTEND_HOST="http://localhost:3000"
 
 # Backtend host
 BE_CONTAINER_HOST="http://backend:8000"
-BACKEND_HOST=""
+BACKEND_HOST="http://localhost:8000"
 
 # run 'openssl rand -base64 15' to generate a random string
 # should be all different from each other
@@ -25,10 +25,10 @@ JWT_2FA=
 # 42 API credentials
 FORTYTWO_APP_UID=
 FORTYTWO_APP_SECRET=
-FORTYTWO_CALLBACK_URL=
+FORTYTWO_CALLBACK_URL="${BACKEND_HOST}/auth/42-callback"
 
 
 # Google API credentials
 GOOGLE_APP_UID=
 GOOGLE_APP_SECRET=
-GOOGLE_CALLBACK_URL=""
+GOOGLE_CALLBACK_URL="${BACKEND_HOST}/auth/google-callback"
