--- a/server/.env.template
+++ b/server/.env.template
@@ -11,8 +11,12 @@ POSTGRES_DB=""
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5434/${POSTGRES_DB}"
 
 # Forntend host
-FRONTEND_HOST=""
-FE_CONTAINER_HOST=""
+FRONTEND_HOST="http://localhost:3000"
+FE_CONTAINER_HOST="http://frontend:3000"
+
+#  Backend host
+BACKEND_HOST="http://localhost:8000"
+BE_CONTAINER_HOST="http://backend:8000"
 
 # run 'openssl rand -base64 15' to generate a random string
 # should be all different from each other
@@ -23,10 +27,10 @@ JWT_2FA=
 # 42 API credentials
 FORTYTWO_APP_UID=
 FORTYTWO_APP_SECRET=
-FORTYTWO_CALLBACK_URL=
+FORTYTWO_CALLBACK_URL="${BACKEND_HOST}/auth/42-callback"
 
 
 # Google API credentials
 GOOGLE_APP_UID=
 GOOGLE_APP_SECRET=
-GOOGLE_CALLBACK_URL=""
+GOOGLE_CALLBACK_URL="${BACKEND_HOST}/auth/google-callback"
