Finishing the project, ready to validatega .

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,12 +3,11 @@ FROM node:18
 WORKDIR /usr/src/app/client
 
 COPY . .
-# RUN npm i -g yarn
 
 RUN yarn install
-# RUN yarn build
+RUN yarn build
 
 EXPOSE 3000
 
-CMD [ "yarn", "dev" ]
+CMD [ "yarn", "start" ]
 
