--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
         "react-router-dom": "^6.9.0",
         "react-spinners": "^0.13.8",
         "react-use-websocket": "^4.3.1",
+        "sharp": "^0.32.1",
         "socket.io-client": "^4.6.1",
         "tailwind-scrollbar-hide": "^1.1.7",
         "typescript": "4.9.5",
